--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,4 +107,8 @@
     </string>
     <string name="action_settings">Settings</string>
     <string name="map">Map</string>
+    <string name="place">Stores</string>
+    <string name="buy">Buy</string>
+    <string name="user">User</string>
+    <string name="sell">Sell</string>
 </resources>
